--- a/src/pages/Card.css
+++ b/src/pages/Card.css
@@ -1,15 +1,18 @@
-.card {
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    width: 15rem;
-    text-align: left;
-    cursor: pointer;
+.card{
+  flex-basis: 23%; 
+  margin: 1%;
+  text-align: center;
+  padding: 20px 0px;
+  background: white;
+  box-shadow: 0px 0px 10px 3px lightgrey;
+}
+
+.card:hover{
+  background-color: rgb(219, 219, 223);
+}
+
+@media only screen and (min-width: 200px) and (max-width: 767px){
+  .card{
+      margin: 10px;
   }
-  
-  h1 {
-    font-size: 24px;
-  }
-  
+}
