--- a/src/pages/Scholarship.css
+++ b/src/pages/Scholarship.css
@@ -1,39 +1,19 @@
-.containerr {
-  display: grid;
-  grid-gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  justify-content: center;
-  margin-top: 2rem;
-  padding: 10px;
-}
-
-h1 {
-  font-size: 20px;
+.category-section{
   text-align: center;
+  padding: 25px 0px;
 }
 
-/* Media Query for tablets and larger screens */
-@media (min-width: 768px) {
-  .containerr {
-    grid-gap: 3rem;
-    margin-top: 3rem;
-    padding: 20px;
-  }
+.category-containerr {
+  width: 1280px;
+  margin: auto;
+  flex-wrap: wrap;
+  display: flex;
+}
 
-  h1 {
-    font-size: 22px;
+
+@media only screen and (min-width: 200px) and (max-width: 767px){
+  .category-container {
+      flex-direction: column;
   }
 }
 
-/* Media Query for larger screens */
-@media (min-width: 1024px) {
-  .containerr {
-    grid-gap: 4rem;
-    margin-top: 4rem;
-    padding: 30px;
-  }
-
-  h1 {
-    font-size: 24px;
-  }
-}
