--- a/src/pages/Scholarship_Card.css
+++ b/src/pages/Scholarship_Card.css
@@ -1,13 +1,19 @@
-.cardd {
-  border: 1px solid #ccc;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
-  width: 15rem;
-  text-align: left;
-  cursor: pointer;
-  height: 40vh;
+.category-cardd {
+  flex-basis: 23%; 
+  margin: 1%;
+  text-align: center;
+  padding: 20px 0px;
+  background: white;
+  box-shadow: 0px 0px 10px 3px lightgrey;
 }
 
+.category-cardd:hover{
+  background-color: rgb(219, 219, 223);
+}
+
+@media only screen and (min-width: 200px) and (max-width: 767px){
+  .category-cardd{
+      margin: 10px;
+  }
+}
 
