--- a/src/pages/All.css
+++ b/src/pages/All.css
@@ -12,7 +12,9 @@
     flex-wrap: wrap;
     display: flex;
 }
-  
+.allpages{
+    display: block;
+} 
 .scholar-items{
     flex-basis: 23%; 
     margin: 1%;
