--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -22,12 +22,23 @@
  
 }
 
+.content .textBox h2 span{
+  color: #5168a7;
+  font-size: 1.2em;
+  font-weight: 900;
+}
+
+.content .textBox p{
+  color: #333;
+  font-size: large;
+}
+
 .content .imgBox{
   width: 600px;
   display: flex;
   justify-content: flex-end;
   padding-right: 50px;
-  margin-top: 50px;
+  margin-top: 5px;
 }
 
 /* .content .imgBox img{
@@ -123,4 +134,32 @@ h1 {
   .card-container {
       flex-direction: column;
   }
+
+}
+
+@media (max-width: 991px)
+{
+  .content{
+    flex-direction: column;
+    margin-top: 100px;
+  }
+
+  .content .textBox h2{
+    font-size: 2.5em;
+    margin-bottom: 15px;
+  }
+
+  .content .textBox{
+    max-width: 100%;
+  }
+
+  .content .imgBox{
+    max-width: 100%;
+    justify-content: center;
+  }
+
+  .content .imgBox img{
+    max-width: 300px;
+  }
+
 }
