--- a/src/pages/Card.css
+++ b/src/pages/Card.css
@@ -5,6 +5,7 @@
   padding: 20px 0px;
   background: white;
   box-shadow: 0px 0px 10px 3px lightgrey;
+  /* background-image: url('../assests/boy-photo.png'); */
 }
 
 .card:hover{
