--- a/src/pages/Card.css
+++ b/src/pages/Card.css
@@ -5,7 +5,7 @@
   text-align: center;
   padding: 20px 0px;
   background: white;
-  box-shadow: 0px 0px 10px 3px lightgrey;
+  box-shadow: 0px 0px 10px 3px rgb(82, 73, 73);
   background-size: cover; /* This property scales the background image to cover the entire card */
   background-repeat: no-repeat;
 }
