--- a/src/pages/Donate.css
+++ b/src/pages/Donate.css
@@ -2,7 +2,7 @@
 
 .uppper_body{
     background-color: #0f172a;
-    height: 60vh;
+    height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,7 +12,7 @@
     flex-wrap: wrap;
     justify-content: center;
     position: absolute;
-    margin-top: 15%;
+    /* margin-top: 15%; */
     width: 50vw;
 }
 .center_right{
